# Test-Driven-Development-Calculator

./: .gitignore  README.md  pyproject.toml
api/: app.py
src/: calculator.py  converters.py  validators.py
src/actions_layer/: actions.py
src/domain/: converter.py  exceptions.py  model.py  validators.py
src/entrypoints/api/: app.py
src/service_layer/: services.py  validators.py
test/: conftest.py  test_add.py  test_divider.py  test_multiply.py  test_substact.py
test/e2e/: test_api.py
test/unit/: test_model.py  test_services_add.py  test_services_divider.py  test_services_multiplier.py  test_services_subtract.py
