[tool.poetry]
name = "Calculator"
version = "0.1.0"
description = "TDD Learning"
authors = ["Nazrin Baghirova <nazrin.baghirov4@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pytest = ">=7.1.2"
flask = ">=2.1.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"